--- a/index.html
+++ b/index.html
@@ -61,18 +61,20 @@
 
         <div id="helpText">
             <p><b>Cara Deposit:</b></p>
-            <p>1. Download File Payment Gateway dan Riwayat PGA di Motion</p>
-            <p>2. Untuk Riwayat PGA Download Semua Vendor yang Dipakai</p>
-            <p>3. Upload File Payment Gateway</p>
-            <p>4. Upload File Riwayat PGA Motion Semua Bisa Pilih Lebih Dari Satu</p>
-            <p>5. Pastikan File Upload Pada Tempat Benar Lalu Klik Proses</p>
+            <p>1. Download File Payment Gateway di IDN</p>
+            <p>2. Download Semua Vendor File Riwayat PGA di Motion</p>
+            <p>3. Riwayat PGA Wajib Download Semua Vendor yang Dipakai</p>
+            <p>4. Upload File Payment Gateway IDN</p>
+            <p>5. Upload Semua Vendor File Riwayat PGA Motion</p>
+            <p>6. Pastikan File Upload Pada Tempat Benar Lalu Klik Proses</p>
             <br>
             <p><b>Cara Withdraw:</b></p>
-            <p>1. Download File Pembukuan Pada Laporan Bank WD PGA</p>
-            <p>2. Download File Riwayat WD PGA Untuk Riwayat PGA Download Semua Vendor yang Dipakai</p>
-            <p>3. Upload File Pembukuan</p>
-            <p>4. Upload File Riwayat WD PGA Motion Semua Bisa Pilih Lebih Dari Satu</p>
-            <p>5. Pastikan File Upload Pada Tempat Benar Lalu Klik Proses</p>
+            <p>1. Download File Laporan Bank WD PGA di Pembukuan</p>
+            <p>2. Download Semua Vendor File Riwayat WD PGA di Motion</p>
+            <p>3. Riwayat WD PGA Wajib Download Semua Vendor yang Dipakai</p>            
+            <p>4. Upload File Laporan Bank WD PGA Pembukuan</p>
+            <p>5. Upload Semua Vendor File Riwayat WD PGA Motion</p>
+            <p>6. Pastikan File Upload Pada Tempat Benar Lalu Klik Proses</p>
             <br>
             <p><b>Disarankan Upload Pada Tanggal Yang Sama Saja !</b></p>
         </div>
