Update Download Excel

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <p>4. Upload File Payment Gateway IDN</p>
             <p>5. Upload Semua Vendor File Riwayat PGA Motion</p>
             <p>6. Pastikan File Upload Pada Tempat Benar Lalu Klik Proses</p>
+            <p>7. Download Excel Jika Ingin File Siap Upload</p>
+            <p><b>Tips: Jika Ada ID yang Tidak Ketemu Bisa Pakai Perbedaan Tanggal Diproses Untuk Referensi !</b></p>
             <br>
             <p><b>Cara Withdraw:</b></p>
             <p>1. Download File Laporan Bank WD PGA di Pembukuan</p>
@@ -76,7 +78,7 @@
             <p>5. Upload Semua Vendor File Riwayat WD PGA Motion</p>
             <p>6. Pastikan File Upload Pada Tempat Benar Lalu Klik Proses</p>
             <br>
-            <p><b>Disarankan Upload Pada Tanggal Yang Sama Saja !</b></p>
+            <p><b>Untuk Semua Upload Disarankan Upload Pada Tanggal Yang Sama Saja !</b></p>
         </div>
     </div>
 </div>
