--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div id="info-elb">Jika ada masalah Info ELB</div>
+<div id="info-elb">Jika ada masalah Info Sushi - STR</div>
 
 <!-- ================ MENU BARU ================ -->
 <div id="nav-menu" style="margin-bottom:25px;">
