Tambah Fishing Club

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         <div class="floating-menu-item" onclick="navigateToLink('https://mancing-mania-7uq.pages.dev/')">
             <span>🎣 Mancing Mania</span>
         </div>
+        <div class="floating-menu-item" onclick="navigateToLink('https://fishing-clubs.pages.dev/')">
+            <span>🪝 Fishing Clubs (Beta)</span>
     </div>
 </div>
 <!-- ========================================================== -->
